--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Scheduling
         run: |
-          npm install,
+          npm install
           node index.js.
